# rkd

./: Cargo.toml  README.md  stale-rk.txt  stale-rkd.txt  test-bad.txt  test-good.txt  test.sh
src/: main.rs
x/a/: a  c  d
y/a/: b  c
