[package]
name = "rotkraken-delta"
version = "3.0.0"
authors = ["luxagen <hello@luxagen.com>"]
homepage = "http://www.luxagen.com/product/rotkraken-delta"
license = "AGPL-3.0-only"
edition = "2021"
resolver="2"

[[bin]]
name = "rkd"
path = "src/main.rs"

[profile.release]
lto = true

[dependencies]
faster-hex = "0.8.1"
nom = "7.1.3"
lazy_static = "1.4.0"
shell-escape = "0.1.5"
inline_colorization = "0.1.6"
colored = "2.0.0"
ahash = "0.8.11"

[dependencies.clap]
version = "4.1.11"
features = ["cargo", "derive"]

[dependencies.unix-ts]
version = "0.4.1"
features = ["chrono"]
